syntax = "proto3";

package ibc.applications.fetchprice.v1;

import "amino/amino.proto";
import "cosmos/base/v1beta1/coin.proto";
import "cosmos/msg/v1/msg.proto";
import "cosmos_proto/cosmos.proto";
import "gogoproto/gogo.proto";
import "ibc/applications/fetchprice/v1/types.proto";
import "ibc/core/client/v1/client.proto";
import "google/protobuf/duration.proto";

option go_package = "github.com/initia-labs/initia/x/ibc/fetchprice/types";

// Msg defines the ibc/nft Msg service.
service Msg {
  option (cosmos.msg.v1.service) = true;

  // Activate price fetching ICQ process
  rpc Activate(MsgActivate) returns (MsgActivateResponse);

  // Deactivate price fetching ICQ process
  rpc Deactivate(MsgDeactivate) returns (MsgDeactivateResponse);

  // UpdateParams defines an operation for updating the x/ibc/fetchprice module
  // parameters.
  rpc UpdateParams(MsgUpdateParams) returns (MsgUpdateParamsResponse);
}

// MsgActivate is the Msg/Activate request type.
message MsgActivate {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "fetchprice/MsgActivate";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string                   authority        = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  string                   source_port      = 2;
  string                   source_channel   = 3;
  google.protobuf.Duration timeout_duration = 4 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
}

// MsgActivateResponse defines the response structure for executing a
// MsgActivate message.
message MsgActivateResponse {}

// MsgDeactivate is the Msg/Deactivate request type.
message MsgDeactivate {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "fetchprice/MsgDeactivate";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
}

// MsgDeactivateResponse defines the response structure for executing a
// MsgDeactivate message.
message MsgDeactivateResponse {}

// MsgUpdateParams is the Msg/UpdateParams request type.
message MsgUpdateParams {
  option (cosmos.msg.v1.signer) = "authority";
  option (amino.name)           = "fetchprice/MsgUpdateParams";

  // authority is the address that controls the module (defaults to x/gov unless overwritten).
  string authority = 1 [(cosmos_proto.scalar) = "cosmos.AddressString"];
  // params defines the x/fetchprice parameters to update.
  //
  // NOTE: All parameters must be supplied.
  Params params = 2 [(gogoproto.nullable) = false, (amino.dont_omitempty) = true];
}

// MsgUpdateParamsResponse defines the response structure for executing a
// MsgUpdateParams message.
//
// Since: cosmos-sdk 0.47
message MsgUpdateParamsResponse {}
